--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^7.0.11",
+    "@types/node": "^7.0.12",
     "bwip-js": "^1.2.3",
     "canvas": "^1.6.5",
     "randomstring": "^1.1.5",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.0",
     "rxjs": "^5.2.0"
   }
 }
